--- a/Views/UserManagement/EditResident.cshtml
+++ b/Views/UserManagement/EditResident.cshtml
@@ -55,9 +55,9 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group mb-3">
-                        <label asp-for="UnitNumber" class="form-label"></label>
-                        <input asp-for="UnitNumber" class="form-control" />
-                        <span asp-validation-for="UnitNumber" class="text-danger"></span>
+                        <label asp-for="HouseNumber" class="form-label"></label>
+                        <input asp-for="HouseNumber" class="form-control" />
+                        <span asp-validation-for="HouseNumber" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6">
