--- a/Views/UserManagement/EditSecurityOfficer.cshtml
+++ b/Views/UserManagement/EditSecurityOfficer.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Edit Security Officer</h2>
 
-<form asp-action="EditOfficer">
+<form asp-action="EditSecurityOfficer">
     <input type="hidden" asp-for="Uid" />
 
     <div class="row">
