--- a/Views/UserManagement/CreateResident.cshtml
+++ b/Views/UserManagement/CreateResident.cshtml
@@ -1,35 +1,31 @@
 ﻿@model B_S_Skyline.Models.UserModel
 
-<h2>Create New User</h2>
+<h2>Create New Resident</h2>
 
-@using (Html.BeginForm("Create", "UserManagement", FormMethod.Post))
+@using (Html.BeginForm("CreateResident", "UserManagement", FormMethod.Post))
 {
     <div class="form-group">
-        <label asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" placeholder="Enter Full Name" />
+        <label asp-for="Name">Full Name</label>
+        <input asp-for="Name" class="form-control" placeholder="Steven Fonseca Araya" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Email"></label>
-        <input asp-for="Email" type="email" class="form-control" placeholder="Enter Email Address" />
+        <input asp-for="Email" type="email" class="form-control" placeholder="sfonseca@bsskyline.com" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Role"></label>
-        <select asp-for="Role" class="form-control">
-            <option value="" disabled selected>Select Role</option>
-            <option value="Resident">Resident</option>
-            <option value="SecurityOfficer">Security Officer</option>
-        </select>
-        <span asp-validation-for="Role" class="text-danger"></span>
+        <label asp-for="Dni">ID Number</label>
+        <input asp-for="Dni" class="form-control" placeholder="901200966" />
+        <span asp-validation-for="Dni" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Dni"></label>
-        <input asp-for="Dni" class="form-control" placeholder="Enter ID Number" />
-        <span asp-validation-for="Dni" class="text-danger"></span>
+        <label asp-for="HouseNumber">House Number</label>
+        <input asp-for="HouseNumber" id="houseNumberInput" class="form-control" placeholder="Enter House Number" />
+        <span asp-validation-for="HouseNumber" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -39,9 +35,11 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="UnitNumber"></label>
-        <input asp-for="UnitNumber" class="form-control" placeholder="Enter Unit Number" />
-        <span asp-validation-for="UnitNumber" class="text-danger"></span>
+        <label asp-for="ProjectId"></label>
+        <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.Projects">
+            <option value="">Select a Project</option>
+        </select>
+        <span asp-validation-for="ProjectId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -56,6 +54,6 @@
     </div>
 
     <button type="submit" class="btn btn-primary">
-        <i class="fa fa-save"></i> Save User
+        <i class="fa fa-save"></i> Save Resident
     </button>
 }
