--- a/Views/Visits/Create.cshtml
+++ b/Views/Visits/Create.cshtml
@@ -22,18 +22,15 @@
         <label class="form-check-label" for="isDeliveryCheck">Is this a delivery?</label>
     </div>
 
-    <div id="deliveryServiceGroup" style="display: none;">
-        <div class="form-group">
-            <label asp-for="DeliveryService" class="control-label"></label>
-            <select asp-for="DeliveryService" class="form-control">
-                <option value="">Select Delivery Service</option>
-                <option value="@Visit.DeliveryServiceType.UberEats">UberEats</option>
-                <option value="@Visit.DeliveryServiceType.Rappi">Rappi</option>
-                <option value="@Visit.DeliveryServiceType.Didi">Didi</option>
-                <option value="@Visit.DeliveryServiceType.PedidosYa">PedidosYa</option>
-                <option value="@Visit.DeliveryServiceType.Other">Other</option>
-            </select>
-        </div>
+    <div class="form-group">
+        <label asp-for="DeliveryService" class="control-label"></label>
+        <select asp-for="DeliveryService" class="form-control">
+            @foreach (var service in Enum.GetValues(typeof(B_S_Skyline.Models.Visit.DeliveryServiceType)))
+            {
+                <option value="@service">@service.ToString()</option>
+            }
+        </select>
+        <span asp-validation-for="DeliveryService" class="text-danger"></span>
     </div>
 
     <div class="form-group">
